Fix -Wattributes warning spam https://bugs.webkit.org/show_bug.cgi?id=169243

Reviewed by Alexey Proskuryakov.

* Shared/API/c/WKDeclarationSpecifiers.h: Add WK_UNAVAILABLE macro.
* UIProcess/API/C/WKPageGroup.h: Use it.


Canonical link: https://commits.webkit.org/186377@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213620 268f45cc-cd09-0410-ab3c-d52691b4dbfc